--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
 	"name":"Legends Browser Extension",
 	"version": "0.1",
-	"manifest_version": 3,
-	"description":"A Browser Extension to automatically switch Wookiepedia Pages to legends version"
+	"manifest_version": 2,
+	"description":"A browser extension to automatically switch Wookiepedia Pages to legends version"
 }
