Added Alert Function to Wookiepedia Pages

--- a/manifest.json
+++ b/manifest.json
@@ -2,5 +2,12 @@
 	"name":"Legends Browser Extension",
 	"version": "0.1",
 	"manifest_version": 2,
-	"description":"A browser extension to automatically switch Wookiepedia Pages to legends version"
+	"description":"A browser extension to automatically switch Wookiepedia Pages to legends version",
+	///TODO: Connect JSON File with JS File
+	"content_scripts":[
+		{
+			"matches":["*://starwars.fandom.com/*"],
+     		"js":["main.js"]
+		}
+	]
 }
