changed manifest & added Icons to support

--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,12 @@
 	"version": "1.0",
 	"manifest_version": 2,
 	"description":"A browser extension to automatically switch Wookiepedia Pages to legends version",
+	"icons": 
+	{
+    "48": "icons/kast_48.ico"
+    ,"32" : "icons/kast.ico"
+  	},
+  	"homepage_url" : "https://github.com/Curtisluke/LegendsBrowserExtension",
 	"content_scripts":[
 		{
 			"matches":["*://starwars.fandom.com/*"],
